# texteditor

./: CMakeLists.txt
qml/: main.qml
